--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "scripts": {
     "svgr": "svgr -d src/Icons/ assets/",
     "test": "echo \"No test specified\" && exit 0",
-    "start": "webpack-dev-server --config ./webpack.config.js --mode development",
-    "build": "webpack --mode production"
+    "serv": "static dist",
+    "build": "webpack --mode production",
+    "prod": "npm run build & npm run serv",
+    "start": "webpack-dev-server --config ./webpack.config.js --mode development"
   },
   "keywords": [],
   "author": "",
@@ -20,7 +22,9 @@
     "@svgr/webpack": "^5.2.0",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.4.2",
+    "file-loader": "^5.1.0",
     "node-sass": "^4.13.1",
+    "node-static": "^0.7.11",
     "react-hot-loader": "^4.12.10",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
