--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-loader": "^8.0.6",
     "css-loader": "^3.4.2",
     "file-loader": "^5.1.0",
+    "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.13.1",
     "node-static": "^0.7.11",
     "react-hot-loader": "^4.12.10",
