--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "svgr": "svgr -d src/Icons/ assets/",
     "test": "echo \"No test specified\" && exit 0",
     "serv": "static dist",
-    "build": "webpack --mode production",
+    "build": "webpack --config ./webpack.prod.js",
     "prod": "npm run build & npm run serv",
-    "start": "webpack-dev-server --config ./webpack.config.js --mode development"
+    "start": "webpack-dev-server --config ./webpack.dev.js"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +21,7 @@
     "@svgr/cli": "^5.2.0",
     "@svgr/webpack": "^5.2.0",
     "babel-loader": "^8.0.6",
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.4.2",
     "file-loader": "^5.1.0",
     "html-webpack-plugin": "^3.2.0",
